--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="/logo-192x192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="/logo-512x512.png" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#416539" />
     <meta name="description" content="BioZen Tracker - Aplikacija za praćenje kilaže i zdravog načina života" />
     <title>BioZen Tracker</title>
